Fixing spacing on nav spinners, text, some top padding. attempt to fix scrollbars, fix button width, fix some nav + big scrollbar changes

--- a/packages/tapisui-common/src/ui/LayoutSections/LayoutSections.module.scss
+++ b/packages/tapisui-common/src/ui/LayoutSections/LayoutSections.module.scss
@@ -15,11 +15,27 @@
 }
 
 .nav {
-  height: auto;
+  height: 100%;
   flex-basis: 20%;
   flex-shrink: 0;
-  min-width: 200px;
-  overflow: auto;
+  min-width: 14rem;
+  overflow-x: hidden;
+  overflow-y: auto;
+
+  // Custom scrollbar styling
+  &::-webkit-scrollbar {
+    width: 11px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background-color: #f1f1f1;
+    border-radius: 10px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 10px;
+  }
 }
 
 .detail {
