--- a/packages/tapisui-common/src/ui/LoadingSpinner/LoadingSpinner.scss
+++ b/packages/tapisui-common/src/ui/LoadingSpinner/LoadingSpinner.scss
@@ -4,6 +4,8 @@
   align-items: center;
   height: 100%;
   width: 100%;
+  padding-top: 0.5rem;
+  min-height: 3rem;
   .inline {
     width: 1.5rem;
     height: 1.5rem;
